--- a/src/components/Modal/TModal.css
+++ b/src/components/Modal/TModal.css
@@ -1,8 +1,13 @@
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .input-d {
   margin: 1em 0;
+}
+
+.box {
+  width: 20vw;
 }
