--- a/src/components/Card/TCard.css
+++ b/src/components/Card/TCard.css
@@ -7,3 +7,8 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.page {
+  width: 100% !important;
+  white-space: normal !important;
+}
