--- a/src/components/Modal/TModal.css
+++ b/src/components/Modal/TModal.css
@@ -1,13 +1,12 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
 .input-d {
   margin: 1em 0;
+  height: 10em !important;
 }
 
 .box {
-  width: 20vw;
+  max-width: 50%;
+  min-width: 30%;
+
+  max-height: 45%;
+  min-height: 30%;
 }
