--- a/src/components/Card/TCard.css
+++ b/src/components/Card/TCard.css
@@ -46,6 +46,15 @@
   right: -10px;
 }
 
+.page-date__no-deadlain {
+  position: absolute;
+  background: #3b82f6;
+  border-radius: 5px;
+  padding: 0.2em;
+  top: -25px;
+  right: -10px;
+}
+
 .button-cards {
   font-weight: 500 !important;
 }
